# orchard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: ci.yml
benches/: circuit.rs  note_decryption.rs  utils.rs
book/src/: SUMMARY.md
book/src/design/: actions.md  commitments.md  nullifiers.md
book/src/design/circuit/: gadgets.md  note-commit.md  value-commit.md  zsa-note-commit.md
dev/bench/: data.js
pkg/: package.json  test-derive.js
src/: action.rs  builder.rs  bundle.rs  bundle_enum_adapter.rs  circuit.rs  circuit_description  constants.rs  domain.rs  issuance.rs  issuance_auth.rs  keys.rs  lib.rs  note.rs  note_encryption.rs  note_encryption_orchard.rs  note_encryption_orchardzsa.rs  note_encryption_v2.rs  note_encryption_v2v3.rs  note_encryption_v3.rs  note_encryption_vanilla.rs  note_encryption_zsa.rs  orchard_flavor.rs  orchard_flavors.rs  pczt.rs  primitives.rs  signature_with_sighash_info.rs  supply_info.rs  swap_bundle.rs  test_vectors.rs  tree.rs  value.rs  verification.rs  wasm.rs  zip32.rs
src/bundle/: batch.rs  burn_validation.rs  commitments.rs
src/circuit/: circuit_common.rs  circuit_description_zsa  circuit_vanilla.rs  circuit_zsa.rs  commit_ivk.rs  derive_nullifier.rs  gadget.rs  note_commit.rs  orchard_sinsemilla_chip.rs  value_commit_orchard.rs
src/circuit/circuit_vanilla/: derive_nullifier.rs  gadget.rs  note_commit.rs  value_commit_orchard.rs
src/circuit/circuit_zsa/: derive_nullifier.rs  gadget.rs  note_commit.rs  value_commit_orchard.rs
src/circuit/gadget/: ecc.rs  mux_chip.rs  sinsemilla.rs
src/circuit/gadget/ecc/: chip.rs
src/circuit/gadget/ecc/chip/: add.rs  add_complete.rs  double.rs  mul.rs  (+2 more)
src/circuit/gadget/sinsemilla/: chip.rs
src/constants/: fixed_bases.rs  nullifier_l.rs  reference_keys.rs  sinsemilla.rs
src/constants/fixed_bases/: note_zsa_commit_r.rs
src/domain/: compact_action.rs  orchard_domain.rs  orchard_domain_vanilla.rs  orchard_domain_zsa.rs  orchard_primitives.rs  orchard_primitives_vanilla.rs  orchard_primitives_zsa.rs  zcash_note_encryption_domain.rs
src/issuance/: batch.rs
src/issuance/tests/: global_state.rs
src/note/: asset_base.rs  asset_id.rs  commitment.rs  note_type.rs  nullifier.rs
src/note_encryption/: action.rs  compact_action.rs  domain.rs  note_bytes.rs  note_encryption_vanilla.rs  note_encryption_zsa.rs  orchard_domain.rs  orchard_domain_vanilla.rs  orchard_domain_zsa.rs
src/pczt/: io_finalizer.rs  parse.rs  prover.rs  signer.rs  tx_extractor.rs  updater.rs  verify.rs
src/primitives/: compact_action.rs  orchard_domain.rs  orchard_primitives.rs  orchard_primitives_vanilla.rs  orchard_primitives_zsa.rs  redpallas.rs  sinsemilla.rs  zcash_note_encryption_domain.rs
src/test_vectors/: asset_base.rs  asset_id.rs  bip340_vector.rs  issuance_auth_sig.rs  keys.rs  merkle_path.rs  note_encryption2.rs  note_encryption_v3.rs  note_encryption_vanilla.rs  note_encryption_zsa.rs  zsa_issuance_auth_sig.rs
src/verification/: issuance.rs
tests/: builder.rs  issuance_global_state.rs  zsa.rs
zcash_note_encryption/src/: lib.rs
(+1 files in other folders)
