[package]
name = "orchard"
version = "0.5.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.65"
description = "The Orchard shielded transaction protocol"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["zcash"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
aes = "0.8"
bitvec = "1"
blake2b_simd = "1"
ff = "0.13"
fpe = "0.6"
group = { version = "0.13", features = ["wnaf-memuse"] }
halo2_gadgets = { git = "https://github.com/QED-it/halo2", branch = "zsa1" }
halo2_proofs = { git = "https://github.com/QED-it/halo2", branch = "zsa1", default-features = false, features = ["batch", "floor-planner-v1-legacy-pdqsort"] }
hex = "0.4"
lazy_static = "1"
memuse = { version = "0.2.1", features = ["nonempty"] }
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
reddsa = "0.5"
nonempty = "0.7"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.3"
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.4" # FIXME: upgrade to 0.5 as it's in zcash/orchard now?

# Logging
tracing = "0.1"

# Developer tooling dependencies
image = { version = "0.24", optional = true }
plotters = { version = "0.3.0", optional = true }

[dev-dependencies]
bridgetree = "0.3" # FIXME: upgrade to 0.4 as it's in zcash/orchard now?
criterion = "0.3" # FIXME: upgrade to 0.4 as it's in zcash/orchard now?
halo2_gadgets = { git = "https://github.com/QED-it/halo2", branch = "zsa1", features = ["test-dependencies"] }
hex = "0.4"
proptest = "1.0.0"
zcash_note_encryption = { version = "0.4", features = ["pre-zip-212"] }
incrementalmerkletree = { version = "0.4", features = ["test-dependencies"] } # FIXME: upgrade to 0.5 as it's in zcash/orchard now?

[target.'cfg(unix)'.dev-dependencies]
inferno = "0.11" # FIXME: zcash/orchard uses this params: { version = "0.11", default-features = false, features = ["multithreaded", "nameattr"] }
pprof = { version = "0.9", features = ["criterion", "flamegraph"] } # FIXME: upgrade to 0.11 as it's in zcash/orchard now?

[lib]
bench = false

[features]
default = ["multicore"]
multicore = ["halo2_proofs/multicore"]
dev-graph = ["halo2_proofs/dev-graph", "image", "plotters"]
test-dependencies = ["proptest"]

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "small"
harness = false

[[bench]]
name = "circuit"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[patch.crates-io]
zcash_note_encryption = { version = "0.4", git = "https://github.com/QED-it/librustzcash.git", branch = "zsa-bundle-in-v5-vector-serialization-with-burn-valid" }
